--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -1,33 +1,35 @@
 # ======================================================
-# 🔹 Configuration HAProxy pour 2 serveurs Apache locaux
+# 🔹 HAProxy avec persistance de session (sticky session)
 # ======================================================
 
 global
-    log stdout format raw local0   # Affiche les logs dans "docker logs"
-    daemon                         # Exécute HAProxy en mode service
+    log stdout format raw local0
 
 defaults
-    mode http                      # Mode HTTP (on gère du web)
-    option httplog                 # Active les logs HTTP
-    timeout connect 5000           # Délai max de connexion à un serveur
-    timeout client  50000          # Délai max de réponse client
-    timeout server  50000          # Délai max de réponse serveur
+    mode http
+    option httplog
+    option http-server-close
+    timeout connect 5000
+    timeout client  50000
+    timeout server  50000
 
 # ---------------------------
-# 🔹 FRONTEND : point d'entrée utilisateur
+# 🔹 FRONTEND (entrée)
 # ---------------------------
 frontend http_front
-    bind *:8080                    # HAProxy écoute sur le port 8080
-    default_backend web_back       # Redirige vers le backend
+    bind *:8080
+    default_backend web_back
 
 # ---------------------------
-# 🔹 BACKEND : serveurs web
+# 🔹 BACKEND (serveurs web)
 # ---------------------------
 backend web_back
-    balance roundrobin             # Répartition équitable (1, 2, 1, 2, ...)
-    option httpchk                 # Vérifie que le serveur répond
-    server web1 web1:80 check      # Serveur Apache 1
-    server web2 web2:80 check      # Serveur Apache 2
+    balance roundrobin                  # répartition de base
+    cookie SRV insert indirect nocache  # <--- cookie SRV ajouté par HAProxy
+    option httpchk                      # vérifie que le serveur répond
+
+    server web1 web1:80 cookie S1 check # identifiant du serveur web1
+    server web2 web2:80 cookie S2 check # identifiant du serveur web2
 
 # ---------------------------
 # 🔹 STATISTIQUES
