--- a/haproxy-web/haproxy.cfg
+++ b/haproxy-web/haproxy.cfg
@@ -17,14 +17,14 @@ defaults
     timeout server  50000     # Timeout côté serveur (50s)
 
 # ---------------------------
-# 🔹 FRONTEND - Point d'entrée
+# FRONTEND - Point d'entrée
 # ---------------------------
 frontend http_front
     bind *:8080               # Écoute sur le port 8080 (accessible via http://localhost:8080)
     default_backend web_back  # Redirige tout le trafic vers le backend nommé "web_back"
 
 # ---------------------------
-# 🔹 BACKEND - Serveurs Web
+# BACKEND - Serveurs Web
 # ---------------------------
 backend web_back
     balance roundrobin                 # Répartition équilibrée : web1 -> web2 -> web1 -> ...
@@ -43,7 +43,7 @@ backend web_back
     server web2 web2:80 cookie S2 check
 
 # ---------------------------
-# 🔹 PAGE DE STATISTIQUES
+# PAGE DE STATISTIQUES
 # ---------------------------
 listen stats
     bind *:8404               # Accessible via http://localhost:8404/stats
@@ -52,7 +52,7 @@ listen stats
     stats refresh 10s         # Actualisation automatique toutes les 10 secondes
 
 # ---------------------------
-# 🔹 RAPPEL VISUEL DU FLUX
+# RAPPEL VISUEL DU FLUX
 # ---------------------------
 # [Client HTTP]
 #      ↓
