--- a/haproxy-web/haproxy.cfg
+++ b/haproxy-web/haproxy.cfg
@@ -4,7 +4,7 @@
 global
     # Journalisation dans la sortie standard (utile en Docker)
     log stdout format raw local0
-
+    stats socket /var/run/haproxy/admin.sock mode 666 level admin expose-fd listeners
 # ---------------------------
 # PARAMÈTRES PAR DÉFAUT
 # ---------------------------
@@ -41,6 +41,7 @@ backend web_back
     # "cookie S1/S2" = identifiant de serveur pour la persistance de session
     server web1 web1:80 cookie S1 check
     server web2 web2:80 cookie S2 check
+    server web3 web3:80 cookie S3 check disabled
 
 # ---------------------------
 # PAGE DE STATISTIQUES
