--- a/haproxy-web/haproxy.cfg
+++ b/haproxy-web/haproxy.cfg
@@ -4,7 +4,7 @@
 global
     # Journalisation dans la sortie standard (utile en Docker)
     log stdout format raw local0
-    stats socket /var/run/haproxy/admin.sock mode 666 level admin expose-fd listeners
+
 # ---------------------------
 # PARAMÈTRES PAR DÉFAUT
 # ---------------------------
@@ -17,14 +17,14 @@ defaults
     timeout server  50000     # Timeout côté serveur (50s)
 
 # ---------------------------
-# FRONTEND - Point d'entrée
+# 🔹 FRONTEND - Point d'entrée
 # ---------------------------
 frontend http_front
     bind *:8080               # Écoute sur le port 8080 (accessible via http://localhost:8080)
     default_backend web_back  # Redirige tout le trafic vers le backend nommé "web_back"
 
 # ---------------------------
-# BACKEND - Serveurs Web
+# 🔹 BACKEND - Serveurs Web
 # ---------------------------
 backend web_back
     balance roundrobin                 # Répartition équilibrée : web1 -> web2 -> web1 -> ...
@@ -41,10 +41,9 @@ backend web_back
     # "cookie S1/S2" = identifiant de serveur pour la persistance de session
     server web1 web1:80 cookie S1 check
     server web2 web2:80 cookie S2 check
-    server web3 web3:80 cookie S3 check
 
 # ---------------------------
-# PAGE DE STATISTIQUES
+# 🔹 PAGE DE STATISTIQUES
 # ---------------------------
 listen stats
     bind *:8404               # Accessible via http://localhost:8404/stats
@@ -53,7 +52,7 @@ listen stats
     stats refresh 10s         # Actualisation automatique toutes les 10 secondes
 
 # ---------------------------
-# RAPPEL VISUEL DU FLUX
+# 🔹 RAPPEL VISUEL DU FLUX
 # ---------------------------
 # [Client HTTP]
 #      ↓
