connection entre 2 pc

--- a/haproxy-db/haproxy.cfg
+++ b/haproxy-db/haproxy.cfg
@@ -17,7 +17,8 @@ backend mysql_back
     mode tcp
     balance roundrobin
     option tcp-check
-    server mysql1 mysql1:3306 check
+    # mysql1 est joint à travers l’IP du PC2 (port publié 33061)
+    server mysql1 pc2-mysql1:33061 check
     server mysql2 mysql2:3306 check
 
 listen stats
