--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     networks:
       - public_net
       - private_net
+    extra_hosts:
+      - "pc3-web2=${WEB2_REMOTE_IP:-192.168.1.219}"  # PC1 simule PC3 → remplacer par l'IP du vrai PC3 plus tard
     command: ["/bin/bash", "/docker-entrypoint-custom.sh"]
 
   # ----------------------------
@@ -38,6 +40,8 @@ services:
       - mysql2
     networks:
       - private_net
+    extra_hosts:
+      - "pc2-mysql1=${MYSQL1_REMOTE_IP:-192.168.1.77}" # IP de mysql1 (hébergé sur PC2)
     command: ["/bin/bash", "/docker-entrypoint-custom.sh"]
 
   # ----------------------------
@@ -48,6 +52,9 @@ services:
     container_name: web1
     volumes:
       - ./web/web1:/var/www/html
+    environment:
+      DB_PROXY_HOST: ${DB_PROXY_HOST:-haproxy-db}
+      DB_PROXY_PORT: ${DB_PROXY_PORT:-3307}
     depends_on:
       - haproxy-db
     networks:
@@ -60,6 +67,11 @@ services:
     container_name: web2
     volumes:
       - ./web/web2:/var/www/html
+    ports:
+      - "${WEB2_PUBLISHED_PORT:-8082}:80"
+    environment:
+      DB_PROXY_HOST: ${DB_PROXY_HOST:-haproxy-db}
+      DB_PROXY_PORT: ${DB_PROXY_PORT:-3307}
     depends_on:
       - haproxy-db
     networks:
@@ -89,6 +101,9 @@ services:
     container_name: web3
     volumes:
       - ./web/web3:/var/www/html
+    environment:
+      DB_PROXY_HOST: ${DB_PROXY_HOST:-haproxy-db}
+      DB_PROXY_PORT: ${DB_PROXY_PORT:-3307}
     depends_on:
       - haproxy-db
     networks:
@@ -110,6 +125,8 @@ services:
     volumes:
       - ./mysql/mysql1/my.cnf:/etc/mysql/conf.d/my.cnf
       - ./mysql/mysql1/init.sql:/docker-entrypoint-initdb.d/init.sql
+    ports:
+      - "${MYSQL1_PUBLISHED_PORT:-33061}:3306"
     networks:
       - private_net
 
@@ -154,6 +171,13 @@ services:
       - private_net
     volumes:
       - ./scripts:/scripts
+    extra_hosts:
+      - "pc2-mysql1=${MYSQL1_REMOTE_IP:-192.168.1.77}"
+    environment:
+      MYSQL1_HOST: ${MYSQL1_HOST:-mysql1}
+      MYSQL1_PORT: ${MYSQL1_PORT:-3306}
+      MYSQL2_HOST: ${MYSQL2_HOST:-mysql2}
+      MYSQL2_PORT: ${MYSQL2_PORT:-3306}
     entrypoint: ["/bin/sh", "/scripts/setup-replication.sh"]
 
 
