--- a/haproxy-web/haproxy.cfg
+++ b/haproxy-web/haproxy.cfg
@@ -39,9 +39,9 @@ backend web_back
     # Définition des serveurs applicatifs
     # "check" = envoie des requêtes de santé automatiques
     # "cookie S1/S2" = identifiant de serveur pour la persistance de session
-    server web1 web1:80 cookie S1 check
+    server web1 web1:80 cookie S1 check disabled
     server web2 web2:80 cookie S2 check
-    server web3 web3:80 cookie S3 check
+    server web3 web3:80 cookie S3 check disabled
 
 # ---------------------------
 # PAGE DE STATISTIQUES
