configuration meme fichier

--- a/.env.pc2-example
+++ b/.env.pc2-example
@@ -1,6 +1,10 @@
 # PC2 (HAProxy web + web1 + mysql1)
 # Copiez ce fichier en .env sur PC2 et adaptez uniquement les IP/ports si le PC3 change.
 
+# Le service de config tourne sur PC1 (172.20.10.4:8088) et expose les fichiers HAProxy.
+HAPROXY_WEB_CONFIG_URL=http://172.20.10.4:8088/haproxy-web.cfg
+HAPROXY_DB_CONFIG_URL=http://172.20.10.4:8088/haproxy-db.cfg
+
 # Les conteneurs web1/web-dashboard doivent contacter le HAProxy DB hébergé sur PC1 (qui simule PC3).
 DB_PROXY_HOST=172.20.10.4   # remplacer par l'IP du vrai PC3 plus tard
 DB_PROXY_PORT=3307
