--- a/haproxy-web/haproxy.cfg
+++ b/haproxy-web/haproxy.cfg
@@ -39,9 +39,9 @@ backend web_back
     # Définition des serveurs applicatifs
     # "check" = envoie des requêtes de santé automatiques
     # "cookie S1/S2" = identifiant de serveur pour la persistance de session
-    server web1 web1:80 cookie S1 check disabled
+    server web1 web1:80 cookie S1 check
     # pc3-web2 pointe vers l’IP du poste qui héberge web2 (PC1 pour l’instant, PC3 plus tard).
-    server web2 pc3-web2:8082 cookie S2 check
+    server web2 pc3-web2:8082 cookie S2 check disabled
     # server web3 web3:80 cookie S3 check
 
 # ---------------------------
