--- a/.env.pc1-example
+++ b/.env.pc1-example
@@ -1,6 +1,11 @@
 # PC1 (client + rôle temporaire de PC3 : HAProxy DB, web2, mysql2)
 # Copiez ce fichier en .env sur PC1 puis ajustez les IP quand vous déplacerez les services vers le vrai PC3.
 
+# Service HTTP de configuration partagé (hébergé sur PC1)
+CONFIG_SERVICE_PORT=8088
+HAPROXY_WEB_CONFIG_URL=http://config-service/haproxy-web.cfg
+HAPROXY_DB_CONFIG_URL=http://config-service/haproxy-db.cfg
+
 # Les serveurs web locaux (web2, web-dashboard) continuent de pointer sur le HAProxy DB local.
 DB_PROXY_HOST=haproxy-db
 DB_PROXY_PORT=3307
