--- a/haproxy-db/haproxy.cfg
+++ b/haproxy-db/haproxy.cfg
@@ -19,7 +19,7 @@ backend mysql_back
     option tcp-check
     # mysql1 est joint à travers l’IP du PC2 (port publié 33061)
     server mysql1 pc2-mysql1:33061 check
-    server mysql2 mysql2:3306 check
+    server mysql2 mysql2:3306 check disabled
 
 listen stats
     mode http
