connection par api

--- a/.env.pc2-example
+++ b/.env.pc2-example
@@ -16,6 +16,14 @@ WEB2_REMOTE_IP=172.20.10.4
 MYSQL1_PUBLISHED_PORT=33061
 MYSQL1_REMOTE_IP=172.20.10.2
 
+# API runtime pour piloter HAProxy
+RUNTIME_API_WEB_PORT=9001
+RUNTIME_API_DB_PORT=9002
+WEB_RUNTIME_API_URL=http://172.20.10.2:9001
+WEB_RUNTIME_API_TOKEN=changeme
+DB_RUNTIME_API_URL=http://172.20.10.4:9002
+DB_RUNTIME_API_TOKEN=changeme
+
 # Pas besoin d'exposer mysql2 depuis PC2, mais on garde les variables pour cohérence.
 MYSQL1_HOST=mysql1
 MYSQL1_PORT=3306
