--- a/.env.pc1-example
+++ b/.env.pc1-example
@@ -18,6 +18,14 @@ WEB2_REMOTE_IP=172.20.10.4   # remplacer par l'IP du futur PC3
 MYSQL1_REMOTE_IP=172.20.10.2
 MYSQL1_PUBLISHED_PORT=33061
 
+# API runtime pour piloter HAProxy à distance
+RUNTIME_API_WEB_PORT=9001
+RUNTIME_API_DB_PORT=9002
+WEB_RUNTIME_API_URL=http://172.20.10.2:9001
+WEB_RUNTIME_API_TOKEN=changeme
+DB_RUNTIME_API_URL=http://localhost:9002
+DB_RUNTIME_API_TOKEN=changeme
+
 # Variables utilisées par replication-init (lancé sur PC1).
 MYSQL1_HOST=pc2-mysql1        # correspond à l'entrée extra_hosts pointant vers PC2
 MYSQL1_PORT=33061
