--- a/shared-config/haproxy-web.cfg
+++ b/shared-config/haproxy-web.cfg
@@ -23,7 +23,7 @@ backend web_back
 
     server web1 web1:80 cookie S1 check
     # pc3-web2 pointe vers l’IP du poste qui héberge web2 (PC1 pour l’instant, PC3 plus tard).
-    server web2 pc3-web2:8082 cookie S2 check disabled
+    server web2 pc3-web2:8082 cookie S2 check
 
 listen stats
     bind *:8404
