--- a/.env.pc1-example
+++ b/.env.pc1-example
@@ -1,34 +1,32 @@
-# PC1 (client + rôle temporaire de PC3 : HAProxy DB, web2, mysql2)
-# Copiez ce fichier en .env sur PC1 puis ajustez les IP quand vous déplacerez les services vers le vrai PC3.
+# PC2 (HAProxy web + web1 + mysql1)
+# Copiez ce fichier en .env sur PC2 et adaptez uniquement les IP/ports si le PC3 change.
 
-# Service HTTP de configuration partagé (hébergé sur PC1)
-CONFIG_SERVICE_PORT=8088
-HAPROXY_WEB_CONFIG_URL=http://config-service/haproxy-web.cfg
-HAPROXY_DB_CONFIG_URL=http://config-service/haproxy-db.cfg
+# Le service de config tourne sur PC1 (192.168.1.219:8088) et expose les fichiers HAProxy.
+HAPROXY_WEB_CONFIG_URL=http://192.168.1.219:8088/haproxy-web.cfg
+HAPROXY_DB_CONFIG_URL=http://192.168.1.219:8088/haproxy-db.cfg
 
-# Les serveurs web locaux (web2, web-dashboard) continuent de pointer sur le HAProxy DB local.
-DB_PROXY_HOST=haproxy-db
+# Les conteneurs web1/web-dashboard doivent contacter le HAProxy DB hébergé sur PC1 (qui simule PC3).
+DB_PROXY_HOST=192.168.1.219   # remplacer par l'IP du vrai PC3 plus tard
 DB_PROXY_PORT=3307
 
-# Publication du serveur web2 pour qu'il soit joignable depuis PC2 (HAProxy web).
-WEB2_PUBLISHED_PORT=8082
-WEB2_REMOTE_IP=192.168.1.219   # remplacer par l'IP du futur PC3
+# HAProxy web doit connaître l'IP du serveur web2 distant.
+WEB2_REMOTE_IP=192.168.1.219
 
-# mysql1 tourne sur PC2 → on décrit son IP/port pour HAProxy DB & replication.
-MYSQL1_REMOTE_IP=192.168.1.133
+# Publication de mysql1 : port du host -> 3306 du conteneur.
 MYSQL1_PUBLISHED_PORT=33061
+MYSQL1_REMOTE_IP=192.168.1.133
 MYSQL2_REMOTE_IP=192.168.1.219
 
-# API runtime pour piloter HAProxy à distance
+# API runtime pour piloter HAProxy
 RUNTIME_API_WEB_PORT=9101
 RUNTIME_API_DB_PORT=9002
 WEB_RUNTIME_API_URL=http://192.168.1.133:9101
 WEB_RUNTIME_API_TOKEN=changeme
-DB_RUNTIME_API_URL=http://localhost:9002
+DB_RUNTIME_API_URL=http://192.168.1.219:9002
 DB_RUNTIME_API_TOKEN=changeme
 
-# Variables utilisées par replication-init (lancé sur PC1).
-MYSQL1_HOST=pc2-mysql1        # correspond à l'entrée extra_hosts pointant vers PC2
-MYSQL1_PORT=33061
+# Pas besoin d'exposer mysql2 depuis PC2, mais on garde les variables pour cohérence.
+MYSQL1_HOST=mysql1
+MYSQL1_PORT=3306
 MYSQL2_HOST=mysql2
 MYSQL2_PORT=3306
