--- a/.env.pc2-example
+++ b/.env.pc2-example
@@ -25,6 +25,10 @@ WEB_RUNTIME_API_TOKEN=changeme
 DB_RUNTIME_API_URL=http://192.168.1.219:9002
 DB_RUNTIME_API_TOKEN=changeme
 
+# URL des pages de stats HAProxy (pour les boutons du dashboard)
+WEB_STATS_URL=http://localhost:8404/stats
+DB_STATS_URL=http://localhost:8405/stats
+
 # Pas besoin d'exposer mysql2 depuis PC2, mais on garde les variables pour cohérence.
 MYSQL1_HOST=mysql1
 MYSQL1_PORT=3306
