--- a/.env.pc1-example
+++ b/.env.pc1-example
@@ -27,6 +27,10 @@ WEB_RUNTIME_API_TOKEN=changeme
 DB_RUNTIME_API_URL=http://localhost:9002
 DB_RUNTIME_API_TOKEN=changeme
 
+# URL des pages de stats HAProxy (pour les boutons du dashboard)
+WEB_STATS_URL=http://localhost:8404/stats
+DB_STATS_URL=http://localhost:8405/stats
+
 # Variables utilisées par replication-init (lancé sur PC1).
 MYSQL1_HOST=pc2-mysql1        # correspond à l'entrée extra_hosts pointant vers PC2
 MYSQL1_PORT=33061
