--- a/shared-config/haproxy-db.cfg
+++ b/shared-config/haproxy-db.cfg
@@ -19,7 +19,7 @@ backend mysql_back
     mode tcp
     balance roundrobin
     option tcp-check
-    server mysql1 pc2-mysql1:33061 check
+    server mysql1 pc2-mysql1:33061 check disabled
     server mysql2 mysql2:3306 check
 
 listen stats
