--- a/haproxy-web/haproxy.cfg
+++ b/haproxy-web/haproxy.cfg
@@ -32,16 +32,16 @@ backend web_back
     # Persistance de session (sticky session)
     # HAProxy ajoute un cookie SRV pour identifier le serveur qui gère la session.
     # Exemple : Set-Cookie: SRV=S1 -> le navigateur renverra toujours SRV=S1 ensuite.
-    cookie SRV insert indirect nocache
     
+    cookie SRV insert indirect nocache
     option httpchk                     # Vérifie régulièrement que les serveurs répondent bien
     
     # Définition des serveurs applicatifs
     # "check" = envoie des requêtes de santé automatiques
     # "cookie S1/S2" = identifiant de serveur pour la persistance de session
-    server web1 web1:80 cookie S1 check disabled
+    server web1 web1:80 cookie S1 check
     server web2 web2:80 cookie S2 check
-    server web3 web3:80 cookie S3 check disabled
+    server web3 web3:80 cookie S3 check
 
 # ---------------------------
 # PAGE DE STATISTIQUES
