--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     volumes:
       - ./haproxy-web/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg
       - ./haproxy-web/runtime:/var/run/haproxy
+      - ./haproxy-web/runtime:/haproxy-runtime
       - ./haproxy-web/haproxy-entrypoint.sh:/docker-entrypoint-custom.sh:ro
     depends_on:
       - web1
@@ -33,6 +34,7 @@ services:
       - ./haproxy-db/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg
       - ./haproxy-db/runtime:/var/run/haproxy
       - ./haproxy-db/haproxy-entrypoint.sh:/docker-entrypoint-custom.sh:ro
+      - ./haproxy-db/runtime:/haproxy-db-runtime
     depends_on:
       - mysql1
       - mysql2
@@ -48,6 +50,7 @@ services:
     container_name: web1
     volumes:
       - ./web/web1:/var/www/html
+      - ./web/shared:/var/www/shared
     depends_on:
       - haproxy-db
     networks:
@@ -60,6 +63,7 @@ services:
     container_name: web2
     volumes:
       - ./web/web2:/var/www/html
+      - ./web/shared:/var/www/shared
     depends_on:
       - haproxy-db
     networks:
