--- a/haproxy-db/haproxy.cfg
+++ b/haproxy-db/haproxy.cfg
@@ -19,6 +19,8 @@ backend mysql_back
     option tcp-check
     server mysql1 mysql1:3306 check
     server mysql2 mysql2:3306 check
+    server mysql3 mysql3:3306 check # role=Master-Master gtid=on
+    # server mysql3 mysql3:3306 check # role=Master-Master gtid=on
 
 listen stats
     mode http
