--- a/haproxy-db/haproxy.cfg
+++ b/haproxy-db/haproxy.cfg
@@ -15,10 +15,11 @@ frontend mysql_front
 
 backend mysql_back
     mode tcp
-    balance roundrobin
+    balance source
     option tcp-check
     server mysql1 mysql1:3306 check
-    server mysql2 mysql2:3306 check
+    server mysql2 mysql2:3306 check backup
+    server mysql3 mysql3:3306 check backup # role=Master-Master gtid=on
     # server mysql3 mysql3:3306 check # role=Master-Master gtid=on
 
 listen stats
