--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 # Ignore les fichiers runtime HAProxy
 haproxy-web/runtime/
 haproxy-db/runtime/
+haproxy-web/haproxy-runtime/
+haproxy-db/haproxy-db-runtime/
+
+# Stockage des activités de session (partagé entre web)
+web/shared/session_activity_store/
+session_activity_store/
+
+# Dépendances potentielles
+vendor/
+node_modules/
