--- a/haproxy-db/haproxy.cfg
+++ b/haproxy-db/haproxy.cfg
@@ -1,8 +1,11 @@
 global
     log stdout format raw local0
-    stats socket /var/run/haproxy/admin.sock mode 666 level admin expose-fd listeners
+    user haproxy
+    group haproxy
+    stats socket ipv4@0.0.0.0:10000 level admin
 
 defaults
+    log global
     mode tcp
     option tcplog
     timeout connect 5s
@@ -17,7 +20,7 @@ backend mysql_back
     mode tcp
     balance source
     option tcp-check
-    server mysql1 mysql1:3306 check
+    server mysql1 mysql1:3306 check disabled
     server mysql3 mysql3:3306 check
     server mysql2 mysql2:3306 check backup # role=Master-Master gtid=on
     # server mysql3 mysql3:3306 check # role=Master-Master gtid=on
