--- a/haproxy-web/haproxy.cfg
+++ b/haproxy-web/haproxy.cfg
@@ -4,11 +4,14 @@
 global
     # Journalisation dans la sortie standard (utile en Docker)
     log stdout format raw local0
-    stats socket /var/run/haproxy/admin.sock mode 666 level admin expose-fd listeners
+    user haproxy
+    group haproxy
+    stats socket ipv4@0.0.0.0:9999 level admin
 # ---------------------------
 # PARAMÈTRES PAR DÉFAUT
 # ---------------------------
 defaults
+    log global
     mode http                 # HAProxy travaille ici en mode HTTP (non TCP)
     option httplog            # Active un format de log optimisé pour HTTP
     option http-server-close  # Ferme la connexion après chaque requête
@@ -33,6 +36,7 @@ backend web_back
     # HAProxy ajoute un cookie SRV pour identifier le serveur qui gère la session.
     # Exemple : Set-Cookie: SRV=S1 -> le navigateur renverra toujours SRV=S1 ensuite.
     
+    cookie SRV insert indirect nocache
     option httpchk                     # Vérifie régulièrement que les serveurs répondent bien
     
     # Définition des serveurs applicatifs
