--- a/mysql/mysql1/my.cnf
+++ b/mysql/mysql1/my.cnf
@@ -1,11 +1,24 @@
 [mysqld]
-server-id=1
-log_bin=mysql-bin
-binlog_do_db=clustering
-auto_increment_increment=2
-auto_increment_offset=1
 
-# Active GTID
+# ID unique du serveur dans le cluster
+server-id=1
+
+# Active les journaux binaires (obligatoire pour la réplication)
+log_bin=mysql-bin
+
+# Répliquer uniquement la base "clustering"
+binlog_do_db=clustering
+
+# Permet au master-master d'éviter les collisions d'auto_increment
+auto_increment_increment=2    # incrémente par 2
+auto_increment_offset=1       # mysql1 prend 1,3,5,... (mysql2 prendra 2)
+
+# Active GTID (réplication moderne)
 gtid_mode=ON
+
+# Interdit les requêtes non compatibles GTID
 enforce_gtid_consistency=ON
+
+# Permet aux serveurs esclaves d'écrire dans leurs binlogs
+# nécessaire pour le master-master
 log_slave_updates=ON
